--- a/index.html
+++ b/index.html
@@ -14,30 +14,30 @@
 
           <h2>HAPPY</h2>
 
-          <h4>| FROM DESPICABLE ME 2 |</h4>
+          <h4>| FROM <b>DESPICABLE ME 2</b></h4>
 
         </div>
       </div>
 
       <div id="back" class="album">
 
-        <h3>| &nbsp;&nbsp; FROM DESPICABLE ME 2 &nbsp;&nbsp; |</h3>
-        
+        <h3>| FROM <b>DESPICABLE ME 2</b></h3>
+
         <h1>HAPPY</h1>
 
-        <h3>WRITTEN BY PHARRELL WILLIAMS</h3>
+        <h3>WRITTEN BY <b>PHARRELL WILLIAMS</b></h3>
 
-        <p>PUBLISHED BY EMI APRIL MUSIC, INC. OBO ITSELF AND MORE WATERFROM NAZARETH (ASCAP) / UNIVERSAL PICTURES MUSIC (ASCAP) | BACKGROUND VOCALS PERFORMED BY RHEA DUMMETT, TREVON HENDERSON, ASHLEY L. LEE, SHAMIKA HIGHTOWER, JASMINE MURRAY AND TERRENCE ROLLE | PRODUCED BY PHARRELL WILLIAMS | RECORDED BY MIKE LARSON FOR I AM OTHER ENTERTAINMENT AT CIRCLE HOUSE STUDIOS, MIAMI, FL | ASSISTED BY MATTHEW DESRAMEAUX | DIGITAL EDITING AND ARRANGEMENT BY ANDREW COLEMAN AND MIKE LARSON FOR I AM OTHER ENTERTAINMENT | MIXED BY LESLIE BRATHWAITE AT MUSIC BOX STUDIOS, ATLANTA, GA.<p>
+        <p>PUBLISHED BY EMI APRIL MUSIC, INC. OBO ITSELF AND MORE WATERFROM NAZARETH (ASCAP) / UNIVERSAL PICTURES MUSIC (ASCAP) | BACKGROUND VOCALS PERFORMED BY RHEA DUMMETT, TREVON HENDERSON, ASHLEY L. LEE, SHAMIKA HIGHTOWER, JASMINE MURRAY AND TERRENCE ROLLE | PRODUCED BY PHARRELL WILLIAMS | RECORDED BY MIKE LARSON FOR I AM OTHER ENTERTAINMENT AT CIRCLE HOUSE STUDIOS, MIAMI, FL | ASSISTED BY MATTHEW DESRAMEAUX | DIGITAL EDITING AND ARRANGEMENT BY ANDREW COLEMAN AND MIKE LARSON FOR I AM OTHER ENTERTAINMENT | MIXED BY LESLIE BRATHWAITE AT MUSIC BOX STUDIOS, ATLANTA, GA.</p>
 
         <span>PHARRELLWILLIAMS.COM</span>
 
-        <img src="images/columbia-logo.png">
+        <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png">
 
         <span>COLUMBIARECORDS.COM</span>
 
         <br>
-        
-        <img src="images/sony-logo.png">
+
+        <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png">
 
       </div>
     </div>
